WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225218
_WKWebAuthenticationPanelDelegate registration and assertion SPI doesn't work without an LAContext
https://bugs.webkit.org/show_bug.cgi?id=225218
Summary
_WKWebAuthenticationPanelDelegate registration and assertion SPI doesn't work...
Jiewen Tan
Reported
2021-04-29 16:47:08 PDT
_WKWebAuthenticationPanelDelegate registration and assertion SPI doesn't work without an LAContext.
Attachments
Patch
(2.88 KB, patch)
2021-04-29 16:50 PDT
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2021-04-29 16:47:27 PDT
rdar://76969220
Jiewen Tan
Comment 2
2021-04-29 16:50:13 PDT
Created
attachment 427387
[details]
Patch
Brent Fulgham
Comment 3
2021-04-30 12:43:34 PDT
Comment on
attachment 427387
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=427387&action=review
r=me
> Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalConnection.mm:146 > + if (shouldUseAlternateAttributes() && !context) {
Looks like we should have noticed that this path didn't match the other verifyUser. :-( Looks good.
Jiewen Tan
Comment 4
2021-04-30 13:11:35 PDT
Comment on
attachment 427387
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=427387&action=review
Thanks Brent for r+ this patch.
>> Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalConnection.mm:146 >> + if (shouldUseAlternateAttributes() && !context) { > > Looks like we should have noticed that this path didn't match the other verifyUser. :-( Looks good.
Yup, look over that there are now two architectures in macOS.
EWS
Comment 5
2021-04-30 13:17:09 PDT
Committed
r276851
(
237202@main
): <
https://commits.webkit.org/237202@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427387
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug