_WKWebAuthenticationPanelDelegate registration and assertion SPI doesn't work without an LAContext https://bugs.webkit.org/show_bug.cgi?id=225218 <rdar://76969220>

Reviewed by Brent Fulgham.

Covered by manual tests.

* UIProcess/WebAuthentication/Cocoa/LocalConnection.mm:
(WebKit::LocalConnection::verifyUser):
Adds a case for nil LAContext.


Canonical link: https://commits.webkit.org/237202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276851 268f45cc-cd09-0410-ab3c-d52691b4dbfc